prototypes/grafana/ytt/ingressroute.yaml
#@ load("@ytt:data", "data")
#@ domain = "grafana." + data.values.shared.domain
#@ traefikLB = "lb." + data.values.shared.domain
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  annotations:
    external-dns.alpha.kubernetes.io/target: #@ traefikLB
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  routes:
    - kind: Rule
      match: #@ "Host(`{}`)".format(domain)
      priority: 10
      services:
        - name: grafana
          port: 80
